--- a/src/assets/styles/cmps/_task-list.scss
+++ b/src/assets/styles/cmps/_task-list.scss
@@ -34,7 +34,7 @@
       overflow: hidden;
       // box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
 
-      &>* {
+      & > * {
         display: grid;
         font-weight: lighter;
         font-size: 1rem;
@@ -58,13 +58,11 @@
         svg {
           color: $secondary-font-clr;
         }
-
       }
     }
 
     &.add-task-li {
       border-bottom-left-radius: $cmp-br;
-      overflow: hidden;
       box-shadow: none;
 
       .task-indicator,
